[gd_scene load_steps=14 format=3 uid="uid://du3dwecjmhttp"]

[ext_resource type="Script" path="res://entities/PlayerController.gd" id="1_8otq7"]
[ext_resource type="Script" path="res://levels/level.gd" id="1_81bx2"]
[ext_resource type="PackedScene" uid="uid://bakr3gertjlwr" path="res://entities/shooty_boi.tscn" id="2_gojxb"]
[ext_resource type="Script" path="res://ui/hud/InventoryPanel.gd" id="4_6urlr"]
[ext_resource type="Script" path="res://ui/hud/GearSlots.gd" id="5_tdxf0"]
[ext_resource type="PackedScene" uid="uid://bg5e7e1fkiyur" path="res://ui/hud/GearSlot.tscn" id="6_aot65"]
[ext_resource type="Script" path="res://ui/hud/PickupTip.gd" id="7_u3ki1"]

[sub_resource type="NavigationMesh" id="NavigationMesh_2ej4k"]
vertices = PackedVector3Array(-27.4962, 1, -32.3981, -27.2462, 1, -32.3981, -27.2462, 1, -32.6481, -25.4962, 1, -34.3981, -25.2462, 1, -34.3981, -25.2462, 1, -34.6481, -27.2462, 1, -32.6481, -25.4962, 1, -32.6481, -25.4962, 1, -34.3981, -25.2462, 1, -34.6481, -23.2462, 1, -34.6481, -23.2462, 1, -47.1481, -25.4962, 1, -34.3981, -25.2462, 1, -34.6481, -23.2462, 1, -47.1481, -40.9962, 1, -30.3981, -27.4962, 1, -30.3981, -27.4962, 1, -32.3981, -40.9962, 1, -30.3981, -27.4962, 1, -32.3981, -27.2462, 1, -32.6481, -27.2462, 1, -32.6481, -25.4962, 1, -34.3981, -23.2462, 1, -47.1481, -40.9962, 1, -47.1481, -40.9962, 1, -30.3981, -23.2462, 1, -34.6481, 23.5038, 1, -34.6481, 23.5038, 1, -47.1481, -23.2462, 1, -47.1481, 25.5038, 1, -34.6481, 25.5038, 1, -34.3981, 25.7538, 1, -34.3981, 27.5038, 1, -32.6481, 27.5038, 1, -32.3981, 27.7538, 1, -32.3981, 25.7538, 1, -34.3981, 25.7538, 1, -32.6481, 27.5038, 1, -32.6481, 27.7538, 1, -32.3981, 27.7538, 1, -30.3981, 36.7538, 1, -30.3981, 27.5038, 1, -32.6481, 27.7538, 1, -32.3981, 36.7538, 1, -30.3981, 25.7538, 1, -34.3981, 27.5038, 1, -32.6481, 36.7538, 1, -30.3981, 25.5038, 1, -34.6481, 25.7538, 1, -34.3981, 36.7538, 1, -30.3981, 36.7538, 1, -47.1481, 23.5038, 1, -47.1481, 23.5038, 1, -47.1481, 23.5038, 1, -34.6481, 25.5038, 1, -34.6481, -24.2462, 1, -33.1481, -24.2462, 1, -32.6481, 24.5038, 1, -32.6481, 24.5038, 1, -33.1481, -26.2462, 1, -31.3981, -26.2462, 1, 17.3519, -25.4962, 1, 17.3519, -25.4962, 1, -31.3981, -20.7462, 1, -26.8981, -20.4962, 1, -26.8981, -20.4962, 1, -27.1481, -24.2462, 1, -24.8981, -20.7462, 1, -24.8981, -20.7462, 1, -26.8981, -19.2462, 1, -27.1481, -18.9962, 1, -26.6481, -18.7462, 1, -31.3981, -24.2462, 1, -24.8981, -20.7462, 1, -26.8981, -20.4962, 1, -27.1481, -18.7462, 1, -31.3981, -24.2462, 1, -31.3981, -20.4962, 1, -27.1481, -19.2462, 1, -27.1481, -18.7462, 1, -31.3981, -24.2462, 5.75, -23.1481, -20.7462, 5.75, -23.1481, -20.7462, 6.25, -25.1481, -24.2462, 6.5, -31.3981, -24.2462, 6.5, -25.8981, -19.7462, 6.5, -25.1481, -19.7462, 6.5, -23.6481, -15.4962, 6.5, -23.8981, -15.4962, 6.5, -31.3981, -19.7462, 6.5, -25.1481, -15.4962, 6.5, -31.3981, -24.2462, 6.5, -31.3981, -20.7462, 6.25, -25.1481, -18.7462, 1, -31.3981, -18.9962, 1, -26.6481, -18.9962, 1, -8.14812, 24.5038, 1, -8.14812, 24.5038, 1, -31.3981, 20.5038, 6.5, 11.1019, 24.5038, 6.5, 11.1019, 24.5038, 6.5, -31.3981, 20.5038, 6.5, -31.3981, 25.7538, 1, -31.3981, 25.7538, 1, 17.3519, 26.2538, 1, 17.3519, 26.2538, 1, -31.3981, -40.9962, 1, 16.3519, -27.4962, 1, 16.3519, -27.4962, 1, -30.3981, -40.9962, 1, -30.3981, 27.7538, 1, 16.3519, 36.7538, 1, 16.3519, 36.7538, 1, -30.3981, 27.7538, 1, -30.3981, -20.7462, 1, -24.8981, -24.2462, 1, -24.8981, -24.2462, 1, -14.6481, -20.7462, 1, -14.6481, -19.7462, 6.5, -23.6481, -19.7462, 6.5, 11.8519, -15.4962, 6.5, 11.6019, -15.4962, 6.5, -23.8981, -24.2462, 1.25, -8.14812, -20.7462, 1.25, -8.14812, -20.7462, 5.75, -23.1481, -24.2462, 5.75, -23.1481, -21.9862, 4.75, -20.6621, -2.74623, 1, 17.3519, -2.74623, 1, 17.6019, -2.49623, 1, 17.6019, 2.50377, 1, 17.6019, 2.75377, 1, 17.6019, 2.75377, 1, 17.3519, -18.9962, 1, -6.14812, -19.2462, 1, -6.14812, -19.2462, 1, -5.89812, -20.4962, 1, -5.89812, -20.4962, 1, -6.14812, -20.7462, 1, -6.14812, -20.7462, 1, -6.14812, -20.7462, 1.25, -8.14812, -24.2462, 1.25, -8.14812, -20.4962, 1, -5.89812, -20.7462, 1, -6.14812, -24.2462, 1.25, -8.14812, -24.2462, 1, 17.3519, -2.49623, 1, 17.6019, -2.49623, 1, 18.8519, 2.50377, 1, 18.8519, 2.50377, 1, 17.6019, -18.9962, 1, -6.14812, -19.2462, 1, -5.89812, -24.2462, 1, 17.3519, -2.74623, 1, 17.3519, -2.74623, 1, 17.3519, -2.49623, 1, 17.6019, 2.50377, 1, 17.6019, 2.75377, 1, 17.3519, -18.9962, 1, -8.14812, -18.9962, 1, -6.14812, 2.75377, 1, 17.3519, 24.5038, 1, 17.3519, 24.5038, 1, -8.14812, -18.9962, 1, -8.14812, -19.2462, 1, -5.89812, -20.4962, 1, -5.89812, -24.2462, 1, 17.3519, 20.5038, 6.5, 13.1019, 20.2538, 6.5, 13.1019, 20.2538, 6.5, 13.3519, 20.2538, 6.5, 13.3519, 18.2538, 6.5, 13.3519, 18.2538, 6.5, 17.3519, 24.5038, 6.5, 11.1019, 20.5038, 6.5, 11.1019, 20.5038, 6.5, 13.1019, 20.5038, 6.5, 13.1019, 20.2538, 6.5, 13.3519, 18.2538, 6.5, 17.3519, 24.5038, 6.5, 17.3519, 24.5038, 6.5, 11.1019, -15.2462, 6.5, 13.3519, -15.2462, 6.5, 13.1019, -15.4962, 6.5, 13.1019, -15.4962, 6.5, 13.1019, -15.4962, 6.5, 11.6019, -19.7462, 6.5, 11.8519, -13.2462, 6.5, 17.3519, -13.2462, 6.5, 13.3519, -15.2462, 6.5, 13.3519, -15.2462, 6.5, 13.3519, -15.4962, 6.5, 13.1019, -19.7462, 6.5, 11.8519, -19.7462, 6.5, 17.3519, -13.2462, 6.5, 17.3519, -13.2462, 6.5, 17.3519, 18.2538, 6.5, 17.3519, 18.2538, 6.5, 13.3519, -13.2462, 6.5, 13.3519, -25.2462, 1, 20.6019, -25.2462, 1, 20.3519, -25.4962, 1, 20.3519, -27.2462, 1, 18.6019, -27.2462, 1, 18.3519, -27.4962, 1, 18.3519, -25.4962, 1, 20.3519, -25.4962, 1, 18.6019, -27.2462, 1, 18.6019, -27.4962, 1, 18.3519, -27.4962, 1, 16.3519, -40.9962, 1, 16.3519, -27.2462, 1, 18.6019, -27.4962, 1, 18.3519, -40.9962, 1, 16.3519, -25.4962, 1, 20.3519, -27.2462, 1, 18.6019, -40.9962, 1, 16.3519, -25.2462, 1, 20.6019, -25.4962, 1, 20.3519, -40.9962, 1, 16.3519, -40.9962, 1, 44.6019, -23.2462, 1, 44.6019, -23.2462, 1, 44.6019, -23.2462, 1, 20.6019, -25.2462, 1, 20.6019, 27.7538, 1, 18.3519, 27.5038, 1, 18.3519, 27.5038, 1, 18.6019, 25.7538, 1, 20.3519, 25.5038, 1, 20.3519, 25.5038, 1, 20.6019, 8.75377, 1, 24.3519, 8.75377, 1, 24.6019, 9.00377, 1, 24.6019, 9.00377, 1, 26.3519, 8.75377, 1, 26.3519, 8.75377, 1, 26.6019, 27.5038, 1, 18.6019, 25.7538, 1, 18.6019, 25.7538, 1, 20.3519, 8.00377, 1, 20.6019, 8.00377, 1, 24.3519, 8.75377, 1, 24.3519, 8.00377, 1, 20.6019, 8.75377, 1, 24.3519, 9.00377, 1, 24.6019, 25.5038, 1, 20.6019, 36.7538, 1, 16.3519, 27.7538, 1, 16.3519, 27.7538, 1, 18.3519, 36.7538, 1, 16.3519, 27.7538, 1, 18.3519, 27.5038, 1, 18.6019, 36.7538, 1, 16.3519, 27.5038, 1, 18.6019, 25.7538, 1, 20.3519, 36.7538, 1, 16.3519, 25.7538, 1, 20.3519, 25.5038, 1, 20.6019, 36.7538, 1, 44.6019, 8.75377, 1, 26.6019, 8.00377, 1, 26.6019, 8.00377, 1, 44.6019, 25.5038, 1, 20.6019, 9.00377, 1, 24.6019, 9.00377, 1, 26.3519, 25.5038, 1, 20.6019, 9.00377, 1, 26.3519, 8.75377, 1, 26.6019, 8.00377, 1, 44.6019, 36.7538, 1, 44.6019, -24.2462, 1, 18.6019, -24.2462, 1, 19.3519, -3.74623, 1, 19.3519, -3.74623, 1, 18.6019, 3.75377, 1, 18.6019, 3.75377, 1, 19.3519, 24.5038, 1, 19.3519, 24.5038, 1, 18.6019, -6.49623, 1, 24.3519, -6.49623, 1, 24.6019, -6.24623, 1, 24.6019, -6.24623, 1, 26.3519, -6.49623, 1, 26.3519, -6.49623, 1, 26.6019, 7.00377, 1, 26.6019, 7.00377, 1, 26.3519, 6.75377, 1, 26.3519, 6.75377, 1, 24.6019, 7.00377, 1, 24.6019, 7.00377, 1, 24.3519, 2.75377, 1, 20.6019, 2.75377, 1, 20.3519, 2.50377, 1, 20.3519, -2.49623, 1, 20.3519, -2.74623, 1, 20.3519, -2.74623, 1, 20.6019, -7.49623, 1, 20.6019, -7.49623, 1, 24.3519, -6.49623, 1, 24.3519, 7.00377, 1, 24.3519, 8.00377, 1, 24.3519, 8.00377, 1, 20.6019, -7.49623, 1, 20.6019, -6.49623, 1, 24.3519, -6.24623, 1, 24.6019, -2.74623, 1, 20.6019, 6.75377, 1, 24.6019, 7.00377, 1, 24.3519, 8.00377, 1, 20.6019, 2.75377, 1, 20.6019, 2.50377, 1, 20.3519, 2.50377, 1, 18.8519, -2.49623, 1, 18.8519, -2.49623, 1, 20.3519, 7.00377, 1, 26.6019, 6.75377, 1, 26.3519, -6.49623, 1, 26.6019, -7.49623, 1, 44.6019, 8.00377, 1, 44.6019, 2.75377, 1, 20.6019, 2.50377, 1, 20.3519, -2.49623, 1, 20.3519, -2.74623, 1, 20.6019, -6.24623, 1, 24.6019, -6.24623, 1, 26.3519, 6.75377, 1, 26.3519, 6.75377, 1, 24.6019, 2.75377, 1, 20.6019, -6.24623, 1, 26.3519, -6.49623, 1, 26.6019, -6.49623, 1, 26.6019, -7.49623, 1, 26.6019, -7.49623, 1, 44.6019, 8.00377, 1, 44.6019, 8.00377, 1, 26.6019, 7.00377, 1, 26.6019, -8.24623, 1, 26.6019, -8.24623, 1, 26.3519, -8.49623, 1, 26.3519, -8.49623, 1, 24.6019, -8.24623, 1, 24.6019, -8.24623, 1, 24.3519, -8.24623, 1, 24.3519, -7.49623, 1, 24.3519, -7.49623, 1, 20.6019, -8.49623, 1, 24.6019, -8.24623, 1, 24.3519, -7.49623, 1, 20.6019, -23.2462, 1, 20.6019, -7.49623, 1, 44.6019, -7.49623, 1, 26.6019, -8.24623, 1, 26.6019, -8.49623, 1, 26.3519, -8.49623, 1, 24.6019, -23.2462, 1, 20.6019, -8.24623, 1, 26.6019, -8.49623, 1, 26.3519, -23.2462, 1, 20.6019, -23.2462, 1, 44.6019, -7.49623, 1, 44.6019)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(8, 7, 6), PackedInt32Array(11, 10, 9), PackedInt32Array(14, 13, 12), PackedInt32Array(17, 16, 15), PackedInt32Array(20, 19, 18), PackedInt32Array(22, 21, 23), PackedInt32Array(23, 21, 24), PackedInt32Array(24, 21, 25), PackedInt32Array(29, 28, 26), PackedInt32Array(26, 28, 27), PackedInt32Array(32, 31, 30), PackedInt32Array(35, 34, 33), PackedInt32Array(38, 37, 36), PackedInt32Array(41, 40, 39), PackedInt32Array(44, 43, 42), PackedInt32Array(47, 46, 45), PackedInt32Array(49, 48, 50), PackedInt32Array(50, 48, 51), PackedInt32Array(51, 48, 52), PackedInt32Array(55, 54, 53), PackedInt32Array(59, 58, 56), PackedInt32Array(56, 58, 57), PackedInt32Array(63, 62, 60), PackedInt32Array(60, 62, 61), PackedInt32Array(66, 65, 64), PackedInt32Array(69, 68, 67), PackedInt32Array(72, 71, 70), PackedInt32Array(74, 73, 75), PackedInt32Array(75, 73, 77), PackedInt32Array(75, 77, 76), PackedInt32Array(80, 79, 78), PackedInt32Array(82, 81, 83), PackedInt32Array(83, 81, 85), PackedInt32Array(83, 85, 84), PackedInt32Array(87, 86, 88), PackedInt32Array(88, 86, 89), PackedInt32Array(93, 92, 90), PackedInt32Array(90, 92, 91), PackedInt32Array(95, 94, 96), PackedInt32Array(96, 94, 98), PackedInt32Array(96, 98, 97), PackedInt32Array(102, 101, 99), PackedInt32Array(99, 101, 100), PackedInt32Array(106, 105, 103), PackedInt32Array(103, 105, 104), PackedInt32Array(110, 109, 107), PackedInt32Array(107, 109, 108), PackedInt32Array(114, 113, 111), PackedInt32Array(111, 113, 112), PackedInt32Array(118, 117, 115), PackedInt32Array(115, 117, 116), PackedInt32Array(122, 121, 119), PackedInt32Array(119, 121, 120), PackedInt32Array(125, 127, 126), PackedInt32Array(126, 127, 123), PackedInt32Array(123, 127, 124), PackedInt32Array(124, 127, 125), PackedInt32Array(130, 129, 128), PackedInt32Array(133, 132, 131), PackedInt32Array(136, 135, 134), PackedInt32Array(139, 138, 137), PackedInt32Array(142, 141, 140), PackedInt32Array(144, 143, 145), PackedInt32Array(145, 143, 146), PackedInt32Array(150, 149, 147), PackedInt32Array(147, 149, 148), PackedInt32Array(152, 151, 153), PackedInt32Array(153, 151, 154), PackedInt32Array(156, 155, 157), PackedInt32Array(157, 155, 158), PackedInt32Array(158, 155, 160), PackedInt32Array(158, 160, 159), PackedInt32Array(162, 161, 163), PackedInt32Array(163, 161, 164), PackedInt32Array(167, 166, 165), PackedInt32Array(170, 169, 168), PackedInt32Array(173, 172, 171), PackedInt32Array(176, 175, 174), PackedInt32Array(177, 181, 178), PackedInt32Array(178, 181, 180), PackedInt32Array(178, 180, 179), PackedInt32Array(184, 183, 182), PackedInt32Array(187, 186, 185), PackedInt32Array(190, 189, 188), PackedInt32Array(192, 191, 193), PackedInt32Array(193, 191, 194), PackedInt32Array(194, 191, 195), PackedInt32Array(199, 198, 196), PackedInt32Array(196, 198, 197), PackedInt32Array(202, 201, 200), PackedInt32Array(205, 204, 203), PackedInt32Array(208, 207, 206), PackedInt32Array(211, 210, 209), PackedInt32Array(214, 213, 212), PackedInt32Array(217, 216, 215), PackedInt32Array(219, 218, 220), PackedInt32Array(220, 218, 221), PackedInt32Array(221, 218, 222), PackedInt32Array(225, 224, 223), PackedInt32Array(228, 227, 226), PackedInt32Array(231, 230, 229), PackedInt32Array(234, 233, 232), PackedInt32Array(237, 236, 235), PackedInt32Array(240, 239, 238), PackedInt32Array(243, 242, 241), PackedInt32Array(245, 244, 246), PackedInt32Array(246, 244, 247), PackedInt32Array(250, 249, 248), PackedInt32Array(253, 252, 251), PackedInt32Array(256, 255, 254), PackedInt32Array(258, 257, 259), PackedInt32Array(259, 257, 260), PackedInt32Array(263, 262, 261), PackedInt32Array(266, 265, 264), PackedInt32Array(268, 267, 269), PackedInt32Array(269, 267, 270), PackedInt32Array(270, 267, 271), PackedInt32Array(275, 274, 272), PackedInt32Array(272, 274, 273), PackedInt32Array(279, 278, 276), PackedInt32Array(276, 278, 277), PackedInt32Array(282, 281, 280), PackedInt32Array(285, 284, 283), PackedInt32Array(288, 287, 286), PackedInt32Array(291, 290, 289), PackedInt32Array(294, 293, 292), PackedInt32Array(297, 296, 295), PackedInt32Array(300, 299, 298), PackedInt32Array(303, 302, 301), PackedInt32Array(305, 304, 306), PackedInt32Array(306, 304, 307), PackedInt32Array(309, 308, 310), PackedInt32Array(310, 308, 311), PackedInt32Array(315, 314, 312), PackedInt32Array(312, 314, 313), PackedInt32Array(317, 316, 318), PackedInt32Array(318, 316, 320), PackedInt32Array(318, 320, 319), PackedInt32Array(322, 321, 323), PackedInt32Array(323, 321, 324), PackedInt32Array(324, 321, 325), PackedInt32Array(325, 321, 326), PackedInt32Array(328, 327, 329), PackedInt32Array(329, 327, 330), PackedInt32Array(330, 327, 331), PackedInt32Array(334, 333, 332), PackedInt32Array(337, 336, 335), PackedInt32Array(340, 339, 338), PackedInt32Array(343, 342, 341), PackedInt32Array(346, 345, 344), PackedInt32Array(348, 347, 349), PackedInt32Array(349, 347, 350), PackedInt32Array(353, 352, 351), PackedInt32Array(356, 355, 354), PackedInt32Array(358, 357, 359), PackedInt32Array(359, 357, 361), PackedInt32Array(359, 361, 360)]
geometry_parsed_geometry_type = 1
edge_max_error = 0.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qwdeb"]
radius = 0.299458
height = 1.00761

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_j5hmt"]

[sub_resource type="Sky" id="Sky_4tu8k"]
sky_material = SubResource("ProceduralSkyMaterial_j5hmt")

[sub_resource type="Environment" id="Environment_6cttk"]
background_mode = 2
background_color = Color(0.198659, 0.19395, 0.593549, 1)
sky = SubResource("Sky_4tu8k")

[sub_resource type="LabelSettings" id="LabelSettings_tt6wm"]
font_size = 18

[node name="TestLevel2" type="Node3D"]
script = ExtResource("1_81bx2")

[node name="Environment" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_2ej4k")

[node name="Ground" type="CSGBox3D" parent="Environment"]
transform = Transform3D(60.696, 0, 0, 0, 1, 0, 0, 0, 30.9282, -2.06447, 0, -1.25582)
use_collision = true
size = Vector3(1.29932, 1, 3)

[node name="LargeWall" type="CSGPolygon3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 25.0399, 0.508523, 19.0259)
use_collision = true
polygon = PackedVector2Array(-1.05829, -0.00660264, 0.53403, 15.0195, 0.991, 15, 1, 0)
depth = 50.0

[node name="CSGBox3D" type="CSGBox3D" parent="Environment/LargeWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.06205, 2.2842, -25.0837)
operation = 2
size = Vector3(4.56238, 5.56839, 6.22321)

[node name="LargeWall3" type="CSGPolygon3D" parent="Environment"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -25.9569, 0.49701, 18.0299)
use_collision = true
polygon = PackedVector2Array(-1.05829, -0.00660264, 0.53403, 15.0195, 0.991, 15, 1, 0)
depth = 50.0

[node name="LargeWall2" type="CSGPolygon3D" parent="Environment"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 26.0166, 0.508523, -31.9652)
use_collision = true
polygon = PackedVector2Array(-1.05829, -0.00660264, 0.53403, 15.0195, 0.991, 15, 1, 0)
depth = 50.0

[node name="LargeWall4" type="CSGPolygon3D" parent="Environment"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -24.9838, 0.508523, -32.9634)
use_collision = true
polygon = PackedVector2Array(-1.05829, -0.00660264, 0.53403, 15.0195, 0.991, 15, 1, 0)
depth = 50.0

[node name="Pillar" type="CSGPolygon3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.424, 0.435, 26)
use_collision = true
polygon = PackedVector2Array(0, 0, 0.00681257, 10.1794, 1.03862, 10.1817, 1, 0)

[node name="Pillar2" type="CSGPolygon3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.853, 0.464, 26)
use_collision = true
polygon = PackedVector2Array(0, 0, 0.00681257, 10.1794, 1.03862, 10.1817, 1, 0)

[node name="InnerWall" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.8622, 3.25151, -16.6382)
use_collision = true
size = Vector3(0.3, 5.73474, 20)

[node name="Ramp" type="CSGBox3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, -1, 0, 0.959408, -4.1937e-08, -0.282023, 0.282023, -1.23276e-08, 0.959408, -22.483, 3.15086, -16.6434)
use_collision = true
size = Vector3(0.3, 5, 20.0107)

[node name="Floor" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5474, 5.88033, -4.00577)
use_collision = true
size = Vector3(5, 0.5, 44.3363)

[node name="Floor2" type="CSGBox3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -20.012, 5.88223, -29.0698)
use_collision = true
size = Vector3(5.83069, 0.5, 9.9458)

[node name="Floor4" type="CSGBox3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.498, 5.88, 15.56)
use_collision = true
size = Vector3(5, 0.5, 35.3323)

[node name="Floor3" type="CSGBox3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.528, 5.88, -6.961)
use_collision = true
size = Vector3(5, 0.5, 50.1358)

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(0.999264, 0, 0.0383703, 0, 1, 0, -0.0383703, 0, 0.999264, 0, 3.14873, 35.9295)
collision_layer = 2
collision_mask = 9
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("1_8otq7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_qwdeb")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.262519, 0)
environment = SubResource("Environment_6cttk")
current = true

[node name="PlayerProjectiles" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.771719, -0.288985, -0.566513, 0.604731, 0.609177, 0.513033, 0.196848, -0.738506, 0.644872, -5.6158, 2.68325, 1.95869)
shadow_enabled = true

[node name="Enemies" type="Node3D" parent="."]

[node name="ShootyBoi" parent="Enemies" instance=ExtResource("2_gojxb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.516, 6.63663, 0)

[node name="ShootyBoi2" parent="Enemies" instance=ExtResource("2_gojxb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.7714, 6.63663, 14.7838)

[node name="ShootyBoi3" parent="Enemies" instance=ExtResource("2_gojxb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.43634, 6.63663, 13.6037)

[node name="ShootyBoi4" parent="Enemies" instance=ExtResource("2_gojxb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35884, 0.718379, 21.4681)

[node name="ShootyBoi5" parent="Enemies" instance=ExtResource("2_gojxb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25992, 0.718379, 21.4681)

[node name="ShootyBoi6" parent="Enemies" instance=ExtResource("2_gojxb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.6126, 0.718379, 21.4681)

[node name="ShootyBoi7" parent="Enemies" instance=ExtResource("2_gojxb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.07867, 0.718379, 25.6378)

[node name="ShootyBoi8" parent="Enemies" instance=ExtResource("2_gojxb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.77084, 0.718379, 21.4681)

[node name="DroppedLoot" type="Node3D" parent="."]

[node name="PlayerUI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="InventoryPanel" type="Panel" parent="PlayerUI"]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_6urlr")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerUI/InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GearSlots" type="Panel" parent="PlayerUI/InventoryPanel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(436, 0)
layout_mode = 2
script = ExtResource("5_tdxf0")

[node name="Head" parent="PlayerUI/InventoryPanel/HBoxContainer/GearSlots" instance=ExtResource("6_aot65")]
layout_mode = 0
offset_left = 153.0
offset_top = 22.0
offset_right = 277.0
offset_bottom = 210.0

[node name="Chest" parent="PlayerUI/InventoryPanel/HBoxContainer/GearSlots" instance=ExtResource("6_aot65")]
layout_mode = 0
offset_left = 153.0
offset_top = 223.0
offset_right = 277.0
offset_bottom = 411.0

[node name="Weapon" parent="PlayerUI/InventoryPanel/HBoxContainer/GearSlots" instance=ExtResource("6_aot65")]
layout_mode = 0
offset_left = 15.0
offset_top = 110.0
offset_right = 139.0
offset_bottom = 298.0

[node name="Amulet" parent="PlayerUI/InventoryPanel/HBoxContainer/GearSlots" instance=ExtResource("6_aot65")]
layout_mode = 0
offset_left = 296.0
offset_top = 108.0
offset_right = 420.0
offset_bottom = 296.0

[node name="Ring" parent="PlayerUI/InventoryPanel/HBoxContainer/GearSlots" instance=ExtResource("6_aot65")]
layout_mode = 0
offset_left = 296.0
offset_top = 311.0
offset_right = 420.0
offset_bottom = 499.0

[node name="Gloves" parent="PlayerUI/InventoryPanel/HBoxContainer/GearSlots" instance=ExtResource("6_aot65")]
layout_mode = 0
offset_left = 15.0
offset_top = 311.0
offset_right = 139.0
offset_bottom = 499.0

[node name="Boots" parent="PlayerUI/InventoryPanel/HBoxContainer/GearSlots" instance=ExtResource("6_aot65")]
layout_mode = 0
offset_left = 153.0
offset_top = 428.0
offset_right = 277.0
offset_bottom = 616.0

[node name="Panel" type="Panel" parent="PlayerUI/InventoryPanel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="PlayerUI/InventoryPanel/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PlayerUI/InventoryPanel/HBoxContainer/Panel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Stats"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PlayerUI/InventoryPanel/HBoxContainer/Panel/Stats"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="StatLabels" type="GridContainer" parent="PlayerUI/InventoryPanel/HBoxContainer/Panel/Stats/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI/InventoryPanel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="Label" type="Label" parent="PlayerUI/InventoryPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Inventory"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="PlayerUI/InventoryPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(412, 0)
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="PickupTip" type="Control" parent="PlayerUI"]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -136.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("7_u3ki1")

[node name="Label" type="Label" parent="PlayerUI/PickupTip"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -11.5
offset_right = 72.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press (F) to pickup:"
horizontal_alignment = 1

[node name="ItemName" type="Label" parent="PlayerUI/PickupTip"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 18.0
offset_right = 73.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_tt6wm")
horizontal_alignment = 1
